# SUMICAPP

./: .gitignore  README.md  analysis_options.yaml  flutter_launcher_icons.yaml  flutter_native_splash.yaml  package-lock.json  package.json  pubspec.yaml  server.js
android/app/: build.gradle.kts
lib/: main.dart
lib/app/: app.dart  bootstrap.dart  router.dart
lib/core/errors/: app_exception.dart  failure.dart
lib/core/network/: api_client.dart  api_config.dart  api_interceptor.dart  error_handler.dart  local_audio_proxy.dart  logging_interceptor.dart  retry_interceptor.dart  token_interceptor.dart
lib/core/providers/: core_providers.dart
lib/core/services/: logger_service.dart
lib/core/storage/: secure_storage_service.dart  shared_prefs_service.dart
lib/features/piped_playback/: audio_handler.dart  piped_service.dart  player_screen.dart
lib/services/: yt_stream_service.dart
lib/shared/themes/: app_colors.dart  app_shapes.dart  app_spacing.dart  app_theme.dart  app_typography.dart
lib/shared/widgets/: error_state_widget.dart  (+2 more)
server/: Cargo.toml
server/src/: config.rs  main.rs  test_yt.rs
server/src/cache/: memory.rs  mod.rs  store.rs
server/src/models/: mod.rs  stream_info.rs  track.rs
server/src/resolver/: client_contexts.rs  fallback.rs  innertube.rs  mod.rs
server/src/routes/: home.rs  lyrics.rs  mod.rs  playlist.rs  related.rs  search.rs  stream.rs
sumic_backend/: pubspec.yaml
sumic_backend/lib/: stream_handler.dart
test/: widget_test.dart
yt_worker/: main.py  requirements.txt  test_all_instances.py  test_yt_music_backend.py
(+35 files in other folders)
